--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,3 +52,30 @@ letter-spacing: 4px;
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
+/*hero image*/
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../images/hero-image.webp') no-repeat center center;
+
+/*animates zoom effect*/
+animation-name: hero-zoom;
+animation-duration: 5s;
+animation-fill-mode: forwards;
+}
+/*create the level of zoom for hero image*/
+@keyframes hero-zoom {
+    from{
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
