--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,13 @@ animation-fill-mode: forwards;
     height: 600px;
 }
 
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+
+}
+
 #left-about {
     padding-top: 30px;
     width: 33%;
@@ -123,7 +130,6 @@ animation-fill-mode: forwards;
 #center-about {
     width: 33%;
     margin: 0 auto;
-    background-color: green;
 }
 
 .left-about-heading {
@@ -154,4 +160,22 @@ hr {
     border-top: 1px solid #3a3a3a;
     width: 100%;
     margin: 5px 0;
+}
+
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding:30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url(../images/ethos-center-image.jpg) no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
+
 }
