--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,6 +277,8 @@ footer {
     }
 }
 
+/*For screens 950px and down*/
+
 @media screen and (max-width: 950px) {
     #menu {
         clear: left;
@@ -307,6 +309,16 @@ footer {
     .left-about-heading p, .right-about-heading p {
         text-align: center;
         padding: 0 20px;
+    }
+
+    #photos {
+        column-count: 3;
+    }
+}
+    /*For small screens 800px and down*/
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
     }
 }
     
